fix(home): fix main container horizontal scroll

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,5 +1,6 @@
 .mainContainer {
   padding: 24px;
+  overflow-x: hidden;
 }
 
 .title {
